@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/phamm
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +phamm-0.5.17.ebuild:
+  version bump
 
   10 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> +phamm-9999.ebuild:
   add cuurent snapshot ebuild
